@@ -3,9 +3,10 @@ PACKAGE_MACOS_BUNDLE_ID=no.fengestad.fs-uae-launcher
 PACKAGE_MACOS_BUNDLE_DISPLAY_NAME="FS-UAE Launcher"
 PACKAGE_NAME=fs-uae-launcher
 PACKAGE_NAME_PRETTY=FS-UAE-Launcher
+PACKAGE_TYPE=fs-app-plugin
 # PACKAGE_DISPLAY_NAME="FS-UAE Launcher"
-PACKAGE_VERSION=3.1.2
+PACKAGE_VERSION=3.1.6
 PACKAGE_VERSION_MAJOR=3
 PACKAGE_VERSION_MINOR=1
-PACKAGE_VERSION_REVISION=2
+PACKAGE_VERSION_REVISION=6
 PACKAGE_VERSION_TAG=
