@@ -1,3 +1,4 @@
+from fsgs.plugins.pluginexecutablefinder import PluginExecutableFinder
 import os
 import subprocess
 import tempfile
@@ -6,11 +7,6 @@ import traceback
 from fsbc.application import Application, app
 from fsbc.system import windows, macosx
 from fsgs.plugins.pluginmanager import Plugin
-
-try:
-    getcwd = os.getcwdu
-except AttributeError:
-    getcwd = os.getcwd
 
 
 class FSUAE(object):
@@ -30,8 +26,10 @@ class FSUAE(object):
     @classmethod
     def start_with_args(cls, args, cwd=None, **kwargs):
         print("FSUAE.start_with_args:", args)
-        exe = cls.find_executable()
-        print("current dir (cwd): ", getcwd())
+        exe = PluginExecutableFinder().find_executable("fs-uae")
+        if exe is None:
+            raise Exception("Could not find fs-uae executable")
+        print("current dir (cwd): ", os.getcwd())
         if cwd is not None:
             print("cwd override:", cwd)
         print("using fs-uae executable:", exe)
@@ -121,94 +119,3 @@ class FSUAE(object):
         args.append("--window-y={0}".format(y))
         # print("window position", env["SDL_VIDEO_WINDOW_POS"])
         # os.environ["SDL_VIDEO_WINDOW_POS"] = "{0},{1}".format(x, y)
-
-    @classmethod
-    def find_executable(cls, executable="fs-uae"):
-        application = Application.instance()
-
-        if os.path.isdir("../fs-uae/src"):
-            # running FS-UAE Launcher from source directory, we
-            # then want to run the locally compiled fs-uae binary
-            path = "../fs-uae/" + executable
-            if windows:
-                path += ".exe"
-            if os.path.isfile(path):
-                return os.path.abspath(path)
-            raise Exception("Could not find development FS-UAE executable")
-
-        if windows:
-            exe = os.path.join(
-                application.executable_dir(), executable + ".exe"
-            )
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(), "fs-uae", executable + ".exe"
-                )
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(), "..", executable + ".exe"
-                )
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(),
-                    "..",
-                    "..",
-                    "..",
-                    "FS-UAE",
-                    Plugin.os_name(True),
-                    Plugin.arch_name(True),
-                    executable + ".exe",
-                )
-        elif macosx:
-            exe = os.path.join(application.executable_dir(), executable)
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(),
-                    "../FS-UAE.app/Contents/MacOS/" + executable,
-                )
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(),
-                    "../../../FS-UAE.app/Contents/MacOS/" + executable,
-                )
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(),
-                    "../../../Programs/Mac OS X/FS-UAE.app/Contents/MacOS/"
-                    + executable,
-                )
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(),
-                    "../../../FS-UAE Launcher.app/Contents/Resources/"
-                    "FS-UAE.app/Contents/MacOS/" + executable,
-                )
-        else:
-            print("application executable dir", application.executable_dir())
-            exe = os.path.join(application.executable_dir(), executable)
-            print("checking", exe)
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(), "..", "bin", executable
-                )
-                print("checking", exe)
-            if not os.path.exists(exe):
-                exe = os.path.join(
-                    application.executable_dir(),
-                    "..",
-                    "..",
-                    "..",
-                    "FS-UAE",
-                    Plugin.os_name(True),
-                    Plugin.arch_name(True),
-                    executable,
-                )
-                print("checking", exe)
-            if not os.path.exists(exe):
-                return executable
-
-        if not os.path.exists(exe):
-            raise Exception(
-                "Could not find {0} executable".format(repr(executable))
-            )
-        return exe
